--- a/app/prose.css
+++ b/app/prose.css
@@ -1,10 +1,12 @@
 .prose h1 {
+  color: #7c2d12;
   text-transform: uppercase;
   font-size: 1.5em;
   font-weight: bold;
 }
 
 .prose h2 {
+  color: #7c2d12;
   font-size: 1em;
   text-transform: uppercase;
   margin-bottom: 1em;
