--- a/app/prose.css
+++ b/app/prose.css
@@ -25,6 +25,7 @@
 .prose ul {
   list-style-type: disc;
   margin-left: 1em;
+  margin-bottom: 1em;
 }
 
 .prose li {
@@ -38,4 +39,25 @@
 
 .prose a:hover {
   color: black;
+}
+
+.prose blockquote {
+  border-left: 0.5rem solid #7c2d12;
+  background-color: #ffedd5;
+  padding: 0.75rem 0 0.75rem 1.5rem;
+  border-radius: 0 0.25rem 0.25rem 0;
+  margin-left: -2rem;
+  margin-bottom: 1rem;
+  font-size: small;
+  color: #555;
+}
+
+.prose p:last-child {
+  margin-bottom: 0rem;
+}
+
+.prose code {
+  background-color: #7c2d1233;
+  padding: 0.25em;
+  border-radius: 0.125em;
 }
